Added starter files

--- a/app/scss/_custom.scss
+++ b/app/scss/_custom.scss
@@ -1,2 +1,8 @@
 //Bootstrap Overrides
 //
+
+$light:     #FFF;
+$primary:   #1B2443;
+$secondary: #3BA1FA;
+$text:      #707070;
+$buttons:   #5B3277;
