--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6281,3 +6281,158 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+
+body {
+  font-family: 'D-DIN', 'Open Sans', sans-serif; }
+
+.btn {
+  font-size: 0.8rem;
+  padding: 10px 30px;
+  border-radius: 0;
+  font-weight: 400;
+  color: #1B2443;
+  text-transform: uppercase;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  display: inline-block;
+  font-family: lato, sans-serif;
+  /*&:hover {
+        background-color: #2c3c5f;
+    }*/ }
+  .btn:active, .btn:focus {
+    box-shadow: none;
+    outline: 0;
+    color: #1B2443; }
+
+.buttons {
+  color: #FFF;
+  background-color: #5B3277;
+  border: 2px solid #5B3277;
+  border-radius: 4px; }
+  .buttons:hover {
+    border-color: #5B3277;
+    color: #707070;
+    background-color: #FFF; }
+
+.buttons2 {
+  color: #FFF;
+  background-color: #1B2443;
+  border: 2px solid #1B2443;
+  border-radius: 4px; }
+  .buttons2:hover {
+    border-color: #1B2443;
+    color: #707070;
+    background-color: #FFF; }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); }
+
+a:focus, a:hover {
+  text-decoration: none;
+  outline: 0; }
+
+a:not([href]):not([tabindex]) {
+  color: #707070; }
+  a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
+    color: #1B2443; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+  color: #1B2443;
+  font-family: 'D-DIN-BOLD'; }
+
+h1 {
+  font-size: 3.75rem; }
+
+h2 {
+  font-size: 2.8rem; }
+
+h3 {
+  font-size: 1.5rem; }
+
+p {
+  font-size: 0.8rem; }
+
+section {
+  padding: 80px 0 0; }
+
+.section {
+  padding-top: 15px;
+  padding-bottom: 30px; }
+
+.SectionHeader {
+  margin: 0 auto;
+  text-align: center; }
+  .SectionHeader .SectionTitle {
+    margin-top: 0;
+    text-transform: uppercase;
+    position: relative; }
+    .SectionHeader .SectionTitle span {
+      color: #1B2443; }
+  .SectionHeader .SectionSubtitle {
+    margin-top: 15px;
+    color: #707070;
+    font-size: 0.8rem; }
+  .SectionHeader .lines {
+    margin: auto;
+    width: 70px;
+    position: relative;
+    border-top: 4px solid #1B2443;
+    margin-top: 15px; }
+
+#mainNav {
+  background-color: #FFF; }
+  #mainNav .navbar-toggler {
+    font-size: 12px;
+    right: 0;
+    padding: 13px;
+    text-transform: uppercase;
+    color: white;
+    border: 0;
+    background-color: #1B2443; }
+  #mainNav .navbar-brand {
+    color: #1B2443; }
+    #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
+      color: #0c101f; }
+  #mainNav .navbar-nav .nav-item .nav-link {
+    font-size: 90%;
+    font-weight: 400;
+    padding: 0.75em 0;
+    letter-spacing: 1px;
+    color: #mainNav .navbar-nav .nav-item .nav-link text; }
+    #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
+      color: #1B2443; }
+
+@media (min-width: 992px) {
+  #mainNav {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
+    -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
+    transition: padding-top 0.3s, padding-bottom 0.3s;
+    border: none;
+    background-color: #FFF; }
+    #mainNav .navbar-brand {
+      font-size: 1.75em;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s; }
+    #mainNav .navbar-nav .nav-item .nav-link {
+      padding: 1.1em 1em !important; }
+    #mainNav.navbar-shrink {
+      padding-top: 0;
+      padding-bottom: 0;
+      background-color: #FFF;
+      -webkit-box-shadow: 0 8px 6px -6px #999;
+      -moz-box-shadow: 0 8px 6px -6px #999;
+      box-shadow: 0 8px 6px -6px #999; }
+      #mainNav.navbar-shrink .navbar-brand {
+        font-size: 1.25em;
+        padding: 12px 0; } }
