--- a/app/scss/_navbar.scss
+++ b/app/scss/_navbar.scss
@@ -7,30 +7,43 @@ header {
     justify-content: space-between;
     padding: 15px 0;
     background-color: $gray-800;
-    transition: all 0.3s ease-in-out;
+    // transition: all 255ms ease-in-out;
+
+    &.sticky {
+        position: fixed;
+        top: 0;
+        width: 100%;
+
+        a.logo{
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+
+        nav ul li a{font-size: 90%;}
+    }
 
     & > .container {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
-        transition: all 0.3s ease-in-out;
+        // transition: all 255ms ease-in-out;
     }
 
     a.logo {
         text-decoration: none;
         color: $light;
         display: inline-block;
-        padding-top: 0.3125rem;
-        padding-bottom: 0.3125rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
         margin-right: 1rem;
-        font-size: 1.25rem;
+        font-size: 1rem;
         line-height: inherit;
         white-space: nowrap;
     }
 
     .hamBurgerWrap {
-        width: 55px;
+        width: 70px;
         font-size: 12px;
         padding: 12px 10px;
         text-transform: uppercase;
@@ -38,6 +51,7 @@ header {
         border: 0;
         background-color: #0e2e47;
         border-radius: 6px;
+        cursor: pointer;
         overflow: hidden;
         user-select: none;
         display: none;
@@ -65,7 +79,7 @@ header {
             opacity: 1;
             left: 0;
             transform: rotate(0deg);
-            transition: 0.25s ease-in-out;
+            // transition: 255ms ease-in-out;
 
             &:nth-child(1) {
                 top: 0px;
@@ -121,7 +135,7 @@ header {
 
                 a {
                     text-decoration: none;
-                    font-size: 90%;
+                    font-size: 100%;
                     font-weight: 400;
                     padding: 0.75em 0;
                     letter-spacing: 1px;
