--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -11,7 +11,7 @@ $gray-600: #868e96;
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
-$black:    #000000;
+$dark:     #000000;
 $text:     #333333;
 
 $phone: "only screen and (max-width : 600px)";
