--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,4 +1,11 @@
-@import "variables.scss";
-@import "reset.scss";
-@import "global.scss";
-@import "navbar.scss";
+/**
+ * Copyright ©2018 GravitiChain. All rights reserved. Code or files can not be copied, modified and/or distributed without the express written permission. Unauthorized copying, modification or use of this file, via any medium is strictly prohibited.
+ *
+ * @version 1.0
+ * @author Saydur Rahman
+ */
+
+@import "variables";
+@import "reset";
+@import "global";
+@import "navbar";
