--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,10 @@
+@charset "UTF-8";
+/**
+ * Copyright ©2018 GravitiChain. All rights reserved. Code or files can not be copied, modified and/or distributed without the express written permission. Unauthorized copying, modification or use of this file, via any medium is strictly prohibited.
+ *
+ * @version 1.0
+ * @author Saydur Rahman
+ */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -41,15 +48,91 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+*, ::before, ::after {
+  transition: all 255ms ease-in-out;
+  box-sizing: border-box; }
+
+body {
+  font-family: 'D-DIN', 'Open Sans', sans-serif;
+  line-height: 1.5; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+  color: #1B2443;
+  font-family: 'D-DIN-BOLD';
+  text-transform: uppercase;
+  margin-bottom: 0.5em; }
+  h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
+    font-family: 'D-DIN';
+    text-transform: initial; }
+
+h1, .h1 {
+  font-size: 2.5em; }
+
+h2, .h2 {
+  font-size: 2em; }
+
+h3, .h3 {
+  font-size: 1.75em; }
+
+h4, .h4 {
+  font-size: 1.5em; }
+
+h5, .h5 {
+  font-size: 1.25em; }
+
+h6, .h6 {
+  font-size: 1em; }
+
+p {
+  line-height: 1.75;
+  margin-bottom: 1em; }
+
 .container {
-  width: 1170px;
-  padding-right: 15px;
-  padding-left: 15px;
+  width: 100%;
+  padding-right: 1em;
+  padding-left: 1em;
   margin-right: auto;
   margin-left: auto; }
-  @media only screen and (max-width: 768px) {
+  @media (min-width: 576px) {
     .container {
-      width: 100%; } }
+      max-width: 540px; } }
+  @media (min-width: 768px) {
+    .container {
+      max-width: 720px; } }
+  @media (min-width: 992px) {
+    .container {
+      max-width: 960px; } }
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1140px; } }
+
+.container-fluid {
+  width: 100%;
+  padding-right: 1em;
+  padding-left: 1em;
+  margin-right: auto;
+  margin-left: auto; }
+
+section {
+  padding: 3em 0; }
+
+.Button {
+  display: inline-block;
+  padding: 0.5em 1.8em;
+  text-align: center;
+  border: 2px solid #adb5bd; }
+  .Button:hover {
+    color: #333333; }
+
+a {
+  text-decoration: none;
+  color: #333333; }
+  a:hover {
+    color: blue; }
+
+svg {
+  width: 100%; }
 
 header {
   position: relative;
@@ -58,39 +141,49 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 15px 0;
-  background-color: #343a40;
-  transition: all 0.3s ease-in-out; }
+  background-color: #343a40; }
+  header.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%; }
+    header.sticky a.logo {
+      padding-top: 0;
+      padding-bottom: 0; }
+    header.sticky nav ul li a {
+      font-size: 90%; }
   header > .container {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
-    transition: all 0.3s ease-in-out; }
+    justify-content: space-between; }
   header a.logo {
     text-decoration: none;
     color: #FFFFFF;
     display: inline-block;
-    padding-top: 0.3125rem;
-    padding-bottom: 0.3125rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     margin-right: 1rem;
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: inherit;
     white-space: nowrap; }
   header .hamBurgerWrap {
-    width: 55px;
+    width: 70px;
     font-size: 12px;
-    padding: 12px 10px;
+    padding: 10px 10px;
     text-transform: uppercase;
     color: #FFFFFF;
     border: 0;
     background-color: #0e2e47;
     border-radius: 6px;
+    cursor: pointer;
     overflow: hidden;
     user-select: none;
     display: none; }
     @media only screen and (max-width: 768px) {
       header .hamBurgerWrap {
-        display: block; } }
+        display: flex;
+        align-items: center;
+        justify-content: space-between; } }
   header #nav-icon {
     width: 14px;
     height: 13px;
@@ -107,8 +200,7 @@ header {
       border: none;
       opacity: 1;
       left: 0;
-      transform: rotate(0deg);
-      transition: 0.25s ease-in-out; }
+      transform: rotate(0deg); }
       header #nav-icon span:nth-child(1) {
         top: 0px; }
       header #nav-icon span:nth-child(2), header #nav-icon span:nth-child(3) {
@@ -140,7 +232,7 @@ header {
       list-style: none; }
       header nav ul li a {
         text-decoration: none;
-        font-size: 90%;
+        font-size: 100%;
         font-weight: 400;
         padding: 0.75em 0;
         letter-spacing: 1px;
