Added fix for gulp file and added Hero

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -5,48 +5,171 @@
  * @version 1.0
  * @author Saydur Rahman
  */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; }
 
 body {
-  line-height: 1; }
+  margin: 0; }
 
-ol, ul {
-  list-style: none; }
+article, aside, footer, header, nav, section {
+  display: block; }
+
+h1 {
+  font-size: 2em; }
+
+figcaption, figure, main {
+  display: block; }
+
+figure {
+  margin: 1em 40px; }
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible; }
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects; }
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted; }
+
+b, strong {
+  font-weight: inherit; }
+
+b, strong {
+  font-weight: bolder; }
+
+pre, code, kbd, samp {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
+dfn {
+  font-style: italic; }
+
+mark {
+  background-color: #ff0;
+  color: #000; }
+
+small {
+  font-size: 80%; }
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sub {
+  bottom: -0.25em; }
+
+sup {
+  top: -0.5em; }
+
+audio, video {
+  display: inline-block; }
+
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+img {
+  border-style: none;
+  height: auto; }
+
+ul {
+  margin: 0;
+  padding: 0; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
+button, input, optgroup, select, textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0; }
+
+button, input {
+  overflow: visible; }
+
+button, select {
+  text-transform: none; }
+
+button, html [type="button"], [type="reset"], [type="submit"] {
+  -webkit-appearance: button; }
+
+button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0; }
+
+button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em; }
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal; }
+
+progress {
+  display: inline-block;
+  vertical-align: baseline; }
+
+textarea {
+  overflow: auto; }
+
+[type="checkbox"], [type="radio"] {
+  box-sizing: border-box;
+  padding: 0; }
+
+[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
+  height: auto; }
+
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px; }
+  [type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none; }
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit; }
+
+details, menu {
+  display: block; }
+
+summary {
+  display: list-item; }
+
+canvas {
+  display: inline-block; }
+
+template, [hidden] {
+  display: none; }
+
+img, object, embed, iframe {
+  max-width: 100%; }
 
 blockquote, q {
   quotes: none; }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before, blockquote:after {
   content: '';
   content: none; }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
+q:before, q:after {
+  content: '';
+  content: none; }
 
 *, ::before, ::after {
   transition: all 255ms ease-in-out;
@@ -61,6 +184,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #1B2443;
   font-family: 'D-DIN-BOLD';
   text-transform: uppercase;
+  margin: 0;
   margin-bottom: 0.5em; }
   h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
     font-family: 'D-DIN';
@@ -117,12 +241,13 @@ p {
 section {
   padding: 3em 0; }
 
-.Button {
+.button {
   display: inline-block;
   padding: 0.5em 1.8em;
   text-align: center;
-  border: 2px solid #adb5bd; }
-  .Button:hover {
+  border: 2px solid #adb5bd;
+  border-radius: 6px; }
+  .button:hover {
     color: #333333; }
 
 a {
@@ -133,6 +258,14 @@ a {
 
 svg {
   width: 100%; }
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .flex .flexItem {
+    width: 49%;
+    padding: .8em; }
 
 header {
   position: relative;
@@ -268,3 +401,19 @@ header {
     header .navToggle:checked ~ nav a {
       opacity: 1;
       transition: opacity 250ms ease-in-out 250ms; }
+
+.hero {
+  background-color: #ced4da; }
+  .hero > .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh; }
+    .hero > .container .sectionContent .sectionText {
+      background-color: bisque; }
+      .hero > .container .sectionContent .sectionText .button {
+        border-color: #ced4da; }
+        .hero > .container .sectionContent .sectionText .button:hover {
+          background-color: #ced4da; }
+    .hero > .container .sectionContent .sectionIMG {
+      background-color: azure; }
